tests/sumo/spec/departure/errors/lane_given10_ignore/errors.sumo
Warning: Invalid departlane definition for vehicle '1'.
